Finally got it working